<resources>
    <string name="app_name">LinearCalc</string>
    <string name="action_settings">Settings</string>
    <string name="cross">C</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="pi">π</string>
    <string name="fact">!</string>
    <string name="in">In</string>
    <string name="log">log</string>
    <string name="exp">e</string>
    <string name="pow">^</string>
    <string name="root">π</string>
    <string name="sqrt">√</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="divide">÷</string>
    <string name="firstParenthesis">(</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="multiply">*</string>
    <string name="secondParenthesis">)</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="substract">-</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="add">+</string>
    <string name="equal">=</string>

</resources>
