<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#0b0002"
    android:id="@+id/MainRedLinear"
    android:layout_weight="9"
    >



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/GreenLinear"
        android:layout_weight="3"


        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/MyText"
            android:layout_weight="2"
            android:background="@drawable/calc_screen_border"
             android:text="@string/zero"
            android:textSize="@dimen/TextSize"
            android:padding="@dimen/MyPadding"
            android:gravity="right"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/BlueLinear"
        android:layout_weight="6"
        android:background="#100002"
        android:orientation="vertical"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/OrangeLinear"
            android:background="#120101"
            android:layout_weight="2"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/TopBottom"
            android:layout_marginBottom="@dimen/TopBottom"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/Opart1"
                android:layout_weight="1"
                android:orientation="horizontal"
                >
                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/sin"
                    style="@style/MyStyle1"
                    android:layout_margin="2dp"
                    android:background="@drawable/colorbutton"
                    android:textAllCaps="false"
                    />
                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/cos"
                    style="@style/MyStyle1"
                    android:layout_margin="2dp"
                    android:background="@drawable/colorbutton"
                    android:textAllCaps="false"
                    />
                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/tan"
                    style="@style/MyStyle1"
                    android:layout_margin="2dp"
                    android:background="@drawable/colorbutton"
                    android:textAllCaps="false"
                    />
                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/pi"
                    style="@style/MyStyle1"
                    android:layout_margin="2dp"
                    android:background="@drawable/colorbutton"
                    android:textAllCaps="false"
                    android:onClick="ClickedPi"
                    />
                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/fact"
                    style="@style/MyStyle1"
                    android:layout_margin="2dp"
                    android:background="@drawable/colorbutton"
                    android:textAllCaps="false"
                    />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:id="@+id/Opart2"
                >
                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/in"
                    style="@style/MyStyle1"
                    android:layout_margin="2dp"
                    android:background="@drawable/colorbutton"
                    android:textAllCaps="false"
                    />
                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/log"
                    style="@style/MyStyle1"
                    android:layout_margin="2dp"
                    android:background="@drawable/colorbutton"
                    android:textAllCaps="false"
                    android:onClick="ClickedLog"
                    />
                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/exp"
                    style="@style/MyStyle1"
                    android:layout_margin="2dp"
                    android:background="@drawable/colorbutton"
                    android:textAllCaps="false"
                    />
                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/pow"
                    style="@style/MyStyle1"
                    android:layout_margin="2dp"
                    android:background="@drawable/colorbutton"
                    android:textAllCaps="false"
                    />
                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/sqrt"
                    style="@style/MyStyle1"
                    android:layout_margin="2dp"
                    android:background="@drawable/colorbutton"
                    android:textAllCaps="false"
                    />

            </LinearLayout>


        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/BlackLinear"
            android:background="#fd413939"
            android:orientation="vertical"
            android:layout_weight="4"
            android:layout_marginBottom="@dimen/TopBottom"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/BlackOne"
                android:orientation="horizontal"
                android:layout_weight="1"
                >
                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/seven"
                    style="@style/MyStyle"
                    android:layout_margin="2dp"
                    android:background="@drawable/colorbutton1"
                    android:onClick="ClickedNumber"
                    />
                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/eight"
                    style="@style/MyStyle"
                    android:layout_margin="2dp"
                    android:background="@drawable/colorbutton1"
                    android:onClick="ClickedNumber"
                    />
                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/nine"
                    style="@style/MyStyle"
                    android:layout_margin="2dp"
                    android:background="@drawable/colorbutton1"
                    android:onClick="ClickedNumber"
                    />
                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/divide"
                    style="@style/MyStyle"
                    android:layout_margin="2dp"
                    android:background="@drawable/colorbutton1"
                    android:onClick="ClickedOperator"
                    />
                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/cross"
                    style="@style/MyStyle"
                    android:layout_margin="2dp"
                    android:background="@drawable/colorbutton1"
                    android:textAllCaps="false"
                    android:onClick="ClearButton"
                    />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/BlackTwo"
                android:layout_weight="1"

                >
                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/four"
                    style="@style/MyStyle"
                    android:layout_margin="2dp"
                    android:background="@drawable/colorbutton1"
                    android:onClick="ClickedNumber"
                    />
                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/five"
                    style="@style/MyStyle"
                    android:layout_margin="2dp"
                    android:background="@drawable/colorbutton1"
                    android:onClick="ClickedNumber"
                    />
                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/six"
                    style="@style/MyStyle"
                    android:layout_margin="2dp"
                    android:background="@drawable/colorbutton1"
                    android:onClick="ClickedNumber"
                    />
                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/multiply"
                    style="@style/MyStyle"
                    android:layout_margin="2dp"
                    android:background="@drawable/colorbutton1"
                    android:onClick="ClickedOperator"
                    />
                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/firstParenthesis"
                    style="@style/MyStyle"
                    android:layout_margin="2dp"
                    android:background="@drawable/colorbutton1"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/BlackThree"
                android:orientation="horizontal"
                android:layout_weight="1"
                >
                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/one"
                    style="@style/MyStyle"
                    android:layout_margin="2dp"
                    android:background="@drawable/colorbutton1"
                    android:onClick="ClickedNumber"
                    />
                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/two"
                    style="@style/MyStyle"
                    android:layout_margin="2dp"
                    android:background="@drawable/colorbutton1"
                    android:onClick="ClickedNumber"
                    />
                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/three"
                    style="@style/MyStyle"
                    android:layout_margin="2dp"
                    android:background="@drawable/colorbutton1"
                    android:onClick="ClickedNumber"
                    />
                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/substract"
                    style="@style/MyStyle"
                    android:layout_margin="2dp"
                    android:background="@drawable/colorbutton1"
                    android:onClick="ClickedOperator"
                    />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/secondParenthesis"
                    style="@style/MyStyle"
                    android:layout_margin="2dp"
                    android:background="@drawable/colorbutton1"
                    />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/BlackFour"
                android:orientation="horizontal"
                android:layout_weight="1"
                >
                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/zero"
                    style="@style/MyStyle"
                    android:layout_margin="2dp"
                    android:background="@drawable/colorbutton1"
                    android:onClick="ClickedNumber"
                    />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/dot"
                    style="@style/MyStyle"
                    android:layout_margin="2dp"
                    android:background="@drawable/colorbutton1"
                    />
                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/add"
                    style="@style/MyStyle"
                    android:layout_margin="2dp"
                    android:background="@drawable/colorbutton1"
                    android:onClick="ClickedOperator"
                    />
                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="@string/equal"
                    style="@style/MyStyle"
                    android:layout_margin="2dp"
                    android:background="@drawable/colorbutton1"
                    android:onClick="ClickedEqual"
                    />

            </LinearLayout>


        </LinearLayout>



    </LinearLayout>

</LinearLayout>
